--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,8 @@
                 "오늘은 파란색이 딱이네요!",
                 "오늘은 노란색이 딱이네요!",
                 "오늘은 초록색이 딱이네요!",
-                "다시 시도해보세요."
+                "오늘은 주황색이 딱이네요!",
+                "오늘은 보라색이 딱이네요!"
             ];
             document.getElementById("message").innerText = messages[Math.floor(Math.random() * messages.length)];
         }
